minikubes/example-react-app/k8s0/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  rules:
   - host: hello-world.info
     http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: example-react-app
                port: 
                  number: 80
